--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,11 +2,7 @@ pipeline {
     agent none
     stages {
         stage('Build') {
-            agent {
-                docker {
-                    image 'python:2-alpine'
-                }
-            }
+            agent any;
             steps {
                 sh 'python -m py_compile sources/add2vals.py sources/calc.py'
             }
