--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -8,34 +8,30 @@ pipeline {
             }
         }
         stage('Test') {
-            agent {
-                docker {
-                    image 'qnib/pytest'
-                }
-            }
+            agent any
             steps {
                 sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
             }
-            post {
-                always {
-                    junit 'test-reports/results.xml'
-                }
-            }
-        }
+        //     post {
+        //         always {
+        //             junit 'test-reports/results.xml'
+        //         }
+        //     }
+        // }
+        stage('Confirm Deploy') {
+           steps {
+               input(message: 'Okay to deploy to staging?', ok: 'Yes')
+           }
         stage('Deliver') {
-            agent {
-                docker {
-                    image 'cdrx/pyinstaller-linux:python2'
-                }
-            }
+            agent any
             steps {
                 sh 'pyinstaller --onefile sources/add2vals.py'
             }
-            post {
-                success {
-                    archiveArtifacts 'dist/add2vals'
-                }
-            }
-        }
+        //     post {
+        //         success {
+        //             archiveArtifacts 'dist/add2vals'
+        //         }
+        //     }
+        // }
     }
 }
