--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -7,13 +7,13 @@ pipeline {
                 sh 'python -m py_compile sources/add2vals.py sources/calc.py'
             }
         }
-        stage('Test') {
-            agent any
-            steps {
-                sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
-            }
+        // stage('Test') {
+        //     agent any
+        //     steps {
+        //         sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
+        //     }
 
-        }
+        // }
         stage('Confirm Deploy') {
            steps {
                input(message: 'Okay to deploy to staging?', ok: 'Yes')
